Responsividade para Desktop

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=REM:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 
@@ -105,10 +106,10 @@
   <label for="telefone">Telefone: </label>
   <input type="tel" id="telefone">
 
-  <label for="email">e-mail: </label>
+  <label for="email">E-mail: </label>
   <input type="email" id="email">
 
-  <label for="mensagem">mensagem: </label>
+  <label for="mensagem">Mensagem: </label>
   <textarea name="mensagem" id="mensagem" rows="3"></textarea>
 
   <button type="submit">Enviar</button>
