adição do aliança e sobre

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
       <ul class="lista__menu">
         <li class="lista__menu__item">
-          <a class="lista__menu__item__link" href="#">Home</a>
+          <a class="lista__menu__item__link" href="index.html">Home</a>
         </li>
         <li class="lista__menu__item">
-          <a class="lista__menu__item__link" href="#">Sobre</a>
+          <a class="lista__menu__item__link" href="sobre.html">Sobre</a>
         </li>
         <li class="lista__menu__item">
-          <a class="lista__menu__item__link" href="#">Aliança Biker</a>
+          <a class="lista__menu__item__link" href="alianca.html">Aliança Biker</a>
         </li>
       </ul>
     </div>
