--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a class="lista__menu__item__link" href="index.html">Home</a>
         </li>
         <li class="lista__menu__item">
-          <a class="lista__menu__item__link" href="sobre.html">Sobre</a>
+          <a class="lista__menu__item__link" href="/src/sobre.html">Sobre</a>
         </li>
         <li class="lista__menu__item">
           <a class="lista__menu__item__link" href="alianca.html">Aliança Biker</a>
