Finalização das páginas sobre e aliança

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
           <a class="lista__menu__item__link" href="/src/sobre.html">Sobre</a>
         </li>
         <li class="lista__menu__item">
-          <a class="lista__menu__item__link" href="alianca.html">Aliança Biker</a>
+          <a class="lista__menu__item__link" href="/src/alianca.html">Aliança Biker</a>
         </li>
       </ul>
     </div>
     <img class="container__logo__mc" src="/img/banner_logo_fenix.png" alt="logo__fenixmc">
     <span class="container__redes">
-      <a class="icon-park-outline--facebook-one" href="#"></a>
-      <a class="bi--instagram" href="#"></a>
+      <a class="icon-park-outline--facebook-one" href="https://www.facebook.com/fenixmcriodejaneiro/"></a>
+      <a class="bi--instagram" href="https://www.instagram.com/fenix_mc_66/"></a>
     </span>
   </header>
   <section class="banner">
