--- a/src/sobre.html
+++ b/src/sobre.html
@@ -29,9 +29,9 @@
         </div>
         <img class="container__logo__mc" src="/img/banner_logo_fenix.png" alt="logo__fenixmc">
         <span class="container__redes">
-            <a class="icon-park-outline--facebook-one" href="#"></a>
-            <a class="bi--instagram" href="#"></a>
-        </span>
+            <a class="icon-park-outline--facebook-one" href="https://www.facebook.com/fenixmcriodejaneiro/"></a>
+            <a class="bi--instagram" href="https://www.instagram.com/fenix_mc_66/"></a>
+          </span>
     </header>
     <main class="main">
         <div class="background"></div>
